--- a/src/App.css
+++ b/src/App.css
@@ -3,40 +3,25 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  font-family: Inter, Avenir, Helvetica, Arial,sans-serif;
+  
+  color:black;
+  
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+body{
+  margin:0;
+  display:flex;
+  background-color: rgb(216, 255, 255);
+  min-height: 100vh;
+  min-width: 320px;
 }
 
 .card {
-  padding: 2em;
+  background-color: white;
+  max-width: 320px;
+  border-radius: 0 0 12px 12px;
+  box-shadow: 1px 1px 24px gray; 
 }
 
-.read-the-docs {
-  color: #888;
-}
+
